--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "npm run start --prefix client",
     "start":  "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run prebuild --prefix client"
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
   },
   "author": "",
   "license": "ISC",
