--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run start --prefix client",
-    "start":  "concurrently \"npm run server\" \"npm run client\"",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run prebuild --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^1.18.4",
     "body-parser": "^1.18.3",
     "bytes": "^3.0.0",
     "concurrently": "^3.6.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.2",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
