Working on secondary login.

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bytes": "^3.0.0",
     "concurrently": "^3.6.0",
+    "connect-mongo": "^2.0.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.2.2",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
