--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.2",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
