--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "bytes": "^3.0.0",
     "concurrently": "^3.6.0",
-    "connect-mongo": "^2.0.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -26,6 +24,8 @@
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
