--- a/package.json
+++ b/package.json
@@ -16,16 +16,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
-    "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.2",
     "nodemon": "^1.18.4",
-    "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
