--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "redux-form": "^7.4.2",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "shuffle-array": "^1.0.1",
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
